# language-processor

./: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: build-and-push.yml  dockerhub-description.yml
app/: server.py  utils.py
cmd/: main.go
internal/detector/: detector.go
internal/server/: detect.go  languages.go  server.go  translate.go
